# kahypar

./: .clang-format  CMakeLists.txt  README.md
cmake/modules/: gmock.cmake
config/: km1_dhgp.ini
kahypar/application/: command_line_options.h
kahypar/datastructure/: hypergraph.h
kahypar/io/: hypergraph_io.h
kahypar/partition/: context.h  context_enum_classes.h  factories.h  partitioner.h
kahypar/partition/dhgp/: cycle_detector.h  dhgp.h  quotient_graph.h  topord.h
kahypar/partition/dhgp/coarsening/: acyclic_coarsener.h
kahypar/partition/dhgp/initial_partitioning/: acyclic_topord_initial_partitioner.h  acyclic_undirected_initial_partitioner.h
kahypar/partition/dhgp/refinement/: acyclic_2way_fm_refiner.h  acyclic_kway_fm_refiner.h
kahypar/partition/registries/: register_coarsening_algorithms.h  register_initial_partitioning_algorithms.h  register_refinement_algorithms.h
tests/: CMakeLists.txt
tests/dhgp/: CMakeLists.txt  cycle_detector_test.cc  directed_hypergraph_test.cc  matcher.h  test_instances.h  topord_test.cc
